--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,22 +3,23 @@ name = "motive"
 version = "0.2.0"
 description = "A Drug-Target Interaction Graph For Inductive Link Prediction"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = "==3.12.*"
 dependencies = [
-    "torch==2.4.*",
+    "torch>=2.5.1",
     "torch-geometric>=2.6.1",
-    "snakemake>=8.25.0",
-    "pyarrow>=18.0.0",
+    "snakemake>=8.27.0",
+    "pyarrow>=19.0.0",
     "tensorboard>=2.18.0",
     "seaborn>=0.13.2",
     "torcheval>=0.0.7",
     "copairs>=0.4.2",
-    "scikit-learn>=1.5.2",
+    "scikit-learn>=1.6.1",
     "pyg-lib>=0.4.0",
     "torch-scatter>=2.1.2",
     "torch-sparse>=0.6.18",
     "torch-cluster>=1.6.3",
     "torch-spline-conv>=1.2.2",
+    "pycomplexheatmap>=1.8.1",
 ]
 
 [dependency-groups]
@@ -32,5 +33,5 @@ dev = [
 
 [tool.uv]
 find-links = [
-    "https://data.pyg.org/whl/torch-2.4.0+cu124.html",
+    "https://data.pyg.org/whl/torch-2.5.1+cu124.html",
 ]
